added glowing light

--- a/index.html
+++ b/index.html
@@ -128,6 +128,51 @@
                 </svg>
               </div>
               <img
+                src="https://c.saavncdn.com/editorial/Let_sPlayTalwiinderPunjabi_20241004093657_500x500.jpg"
+                alt=""
+              />
+              <h2>Talwiinder's Hits!</h2>
+              <p>Hits to boost your mood and fill you with happines!</p>
+            </div>
+
+            <div data-folder="karan" class="card">
+              <div class="play">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                  <circle cx="50" cy="50" r="48" fill="#1DB954" />
+                  <polygon points="40,30 75,50 40,70" fill="white" />
+                </svg>
+              </div>
+              <img
+                src="https://s.saregama.tech/image/c/m/4/a8/4c/karan-aujla_1755769426.jpg"
+                alt=""
+              />
+              <h2>Karan Aujla's Hits!</h2>
+              <p>Listen to Karan Aujla's best tracks!</p>
+            </div>
+
+            <div data-folder="talwiinder" class="card">
+              <div class="play">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                  <circle cx="50" cy="50" r="48" fill="#1DB954" />
+                  <polygon points="40,30 75,50 40,70" fill="white" />
+                </svg>
+              </div>
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiP_LHrwp5V0tYRtac4H97sKGs8SZ5wnQ88g&s"
+                alt=""
+              />
+              <h2>Imagine Dragons!</h2>
+              <p>Boost your mood with Imagine Dragons' best tracks!</p>
+            </div>
+
+            <div data-folder="talwiinder" class="card">
+              <div class="play">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                  <circle cx="50" cy="50" r="48" fill="#1DB954" />
+                  <polygon points="40,30 75,50 40,70" fill="white" />
+                </svg>
+              </div>
+              <img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNpEzuK0iN4rv-6uHEvW23ZZQzaaJBarZxMg&s"
                 alt=""
               />
@@ -135,7 +180,7 @@
               <p>Hits to boost your mood and fill you with happines!</p>
             </div>
 
-            <div data-folder="other" class="card">
+            <div data-folder="karan" class="card">
               <div class="play">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
                   <circle cx="50" cy="50" r="48" fill="#1DB954" />
